# oop-assignments

./: .gitignore
Agentie imobiliara/: List.c  List.h  TestDomain.c  TestDomain.h  TestList.c  TestList.h  TestRepo.c  TestRepo.h  TestService.c  TestService.h  TestUtils.c  TestUtils.h  TestValidare.c  TestValidare.h  main.c  oferta.c  oferta.h  repo.c  repo.h  service.c  service.h  teste.c  teste.h  ui.c  ui.h  utils.c  utils.h  validator.c  validator.h
Examen/: GUI.cpp  GUI.h  Observer.h  Repository.cpp  Repository.h  Service.cpp  Service.h  TableWindow.cpp  TableWindow.h  Task.cpp  Task.h  Test.cpp  Test.h  data.txt  main.cpp  test.txt
GenericList/: List.c  List.h
Lab10/Lab10/: Lab10.cpp  Lab10.h  data.txt  exemplu.html  main.cpp  test.html
Lab6/Lab6/: Cos.cpp  Cos.h  FileRepoTests.cpp  Lab6.cpp  (+13 more)
Simulare/: List.cpp  List.h  Produs.cpp  Produs.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Simulare.cpp  Simulare.h  data.txt  main.cpp
SimulareSub4/: GUI.cpp  GUI.h  Observer.cpp  Observer.h  Repository.cpp  Repository.h  Service.cpp  Service.h  TableView.cpp  TableView.h  Task.cpp  Task.h  Test.cpp  Test.h  data.txt  main.cpp
lab_2/: CMakeLists.txt  main.c
lab_2/domain/: payment.c  payment.h
lab_2/repository/: repository.c  repository.h
lab_2/service/: service_payment.c  service_payment.h
lab_2/tests/: test_domain.c  test_repository.c  test_repository.h  test_service.c  test_service.h  tests.c  tests.h
lab_2/ui/: ui.c  ui.h
test_for_sim/: List.cpp  List.h  main.cpp  test_for_sim.cpp  test_for_sim.h  test_for_sim.qrc  test_for_sim.ui
(+120 files in other folders)
